Estructura de proyecto lista

--- a/src/main/resources/structure/root/Integration.java.mustache
+++ b/src/main/resources/structure/root/Integration.java.mustache
@@ -1,4 +1,4 @@
-package {{package}}
+package {{groupId}}.{{principalPackage}}.integrations;
 
 public class Integration {
     private Integration(){}
