--- a/src/main/resources/structure/root/UserInterface.java.mustache
+++ b/src/main/resources/structure/root/UserInterface.java.mustache
@@ -1,4 +1,4 @@
-package {{package}}
+package {{groupId}}.{{principalPackage}}.userinterfaces;
 
 public class UserInterface {
     private UserInterface(){}
