--- a/src/main/resources/structure/root/Interaction.java.mustache
+++ b/src/main/resources/structure/root/Interaction.java.mustache
@@ -1,4 +1,4 @@
-package {{package}}
+package {{groupId}}.{{principalPackage}}.interactions;
 
 public class Interaction {
     private Interaction(){}
