--- a/src/main/resources/structure/root/build.gradle.mustache
+++ b/src/main/resources/structure/root/build.gradle.mustache
@@ -16,13 +16,14 @@ repositories {
 buildscript {
     repositories {
         maven {
-            url "{{buildRepository}}"
+            url "{{remoteRepository}}"
         }
         mavenLocal()
+        mavenCentral()
     }
 
     dependencies {
-        classpath("net.serenity-bdd:serenity-gradle-plugin:1.9.20")
+        classpath("net.serenity-bdd:serenity-gradle-plugin:{{serenityV}}")
     }
 }
 
@@ -42,18 +43,9 @@ dependencies {
     implementation "net.serenity-bdd:serenity-screenplay-rest:$rootProject.ext.serenityVersion"
     implementation "net.serenity-bdd:serenity-cucumber:$rootProject.ext.serenityCucumberVersion"
 
-    // Data bases connections dependencies
-    implementation group: 'co.com.bancolombia.certificacion', name: 'conexion-bd', version: '4.2.1'
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.15'
-
-    //Excel dependencies
-    implementation group: 'org.apache.poi', name: 'poi', version: '3.16'
-    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
-    implementation group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '3.16'
-
     //Test compilation
-    testImplementation 'junit:junit:$rootProject.ext.junit'
-    testImplementation 'org.hamcrest:hamcrest-all:$rootProject.ext.hamcrest'
+    testImplementation "junit:junit:$rootProject.ext.junit"
+    testImplementation "org.hamcrest:hamcrest-all:$rootProject.ext.hamcrest"
 
     //Lombok dependencies
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
