ajuste creacion de task

--- a/src/main/resources/tasks/rest/resttask.java.mustache
+++ b/src/main/resources/tasks/rest/resttask.java.mustache
@@ -6,7 +6,7 @@ import net.serenitybdd.screenplay.Actor;
 import io.restassured.http.ContentType;
 import static net.serenitybdd.screenplay.Tasks.instrumented;
 
-public class {{taskName}} extends implements Task {
+public class {{taskName}} implements Task {
 
     public {{taskName}}() {}
 
