--- a/src/main/resources/tasks/ux/uxtask.java.mustache
+++ b/src/main/resources/tasks/ux/uxtask.java.mustache
@@ -6,7 +6,7 @@ import net.serenitybdd.screenplay.actions.Click;
 import net.serenitybdd.screenplay.actions.Enter;
 import static net.serenitybdd.screenplay.Tasks.instrumented;
 
-public class {{taskName}} extends implements Task {
+public class {{taskName}} implements Task {
 
     public {{taskName}}() {}
 
