--- a/src/main/resources/runners/Runner.java.mustache
+++ b/src/main/resources/runners/Runner.java.mustache
@@ -1,13 +1,13 @@
 package {{package}}.runners;
 
-import cucumber.api.CucumberOptions;
-import cucumber.api.SnippetType;
-import net.serenity.cucumber.CucumberWithSerenity;
+import io.cucumber.junit.CucumberOptions;
+import net.serenitybdd.cucumber.CucumberWithSerenity;
 import org.junit.runner.RunWith;
 
 @RunWith(CucumberWithSerenity.class)
 @CucumberOptions(
-        features = "features/",
+        features = "src/test/resources/features/",
         glue = "{{package}}.stepdefinitions",
-        snippets = SnippetType.CAMELCASE)
+        snippets = CucumberOptions.SnippetType.CAMELCASE
+)
 public class {{runnerName}} {}
