--- a/src/main/resources/interactions/get/get.java.mustache
+++ b/src/main/resources/interactions/get/get.java.mustache
@@ -2,18 +2,19 @@ package {{package}}.interactions;
 
 import net.serenitybdd.screenplay.Actor;
 import net.thucydides.core.annotations.Step;
-import static net.serenitybdd.screenplay.Task.instrumented;
-import net.serenitybdd.screenplay.rest.abilities.CallAnApi.as;
+import net.serenitybdd.screenplay.rest.interactions.RestInteraction;
+import static net.serenitybdd.screenplay.Tasks.instrumented;
+import static net.serenitybdd.screenplay.rest.abilities.CallAnApi.as;
 
 public class Get extends RestInteraction {
 
     private final String resource;
 
-    private Get(String resource) {
+    public Get(String resource) {
         this.resource = resource;
     }
 
-    @Step("{0} execute a PUT on the resource #resource")
+    @Step("{0} execute a GET on the resource #resource")
     @Override
     public <T extends Actor> void performAs(T actor) { rest().log().all().get(as(actor).resolve(resource)).then().log().all(); }
 
