--- a/src/main/resources/structure/root/Runner.java.mustache
+++ b/src/main/resources/structure/root/Runner.java.mustache
@@ -1,13 +1,13 @@
 package {{groupId}}.{{principalPackage}}.runners;
 
-import cucumber.api.CucumberOptions;
-import cucumber.api.SnippetType;
-import net.serenity.cucumber.CucumberWithSerenity;
+import io.cucumber.junit.CucumberOptions;
+import net.serenitybdd.cucumber.CucumberWithSerenity;
 import org.junit.runner.RunWith;
 
 @RunWith(CucumberWithSerenity.class)
 @CucumberOptions(
-        features = "",
-        glue = "",
-        snippets = SnippetType.CAMELCASE)
+        features = "src/test/resources/features/",
+        glue = "{{package}}.stepdefinitions",
+        snippets = CucumberOptions.SnippetType.CAMELCASE
+)
 public class Runner {}
