Ajustes runner y buikd

--- a/src/main/resources/runners/Runner.java.mustache
+++ b/src/main/resources/runners/Runner.java.mustache
@@ -6,7 +6,7 @@ import org.junit.runner.RunWith;
 
 @RunWith(CucumberWithSerenity.class)
 @CucumberOptions(
-        features = "src/test/resources/features/",
+        features = "src/test/resources/features/.../",
         glue = "{{package}}.stepdefinitions",
         snippets = CucumberOptions.SnippetType.CAMELCASE
 )
