--- a/src/main/resources/structure/root/build.gradle.mustache
+++ b/src/main/resources/structure/root/build.gradle.mustache
@@ -33,7 +33,7 @@ repositories {
 ext {
     serenityVersion = '{{serenityV}}'
     serenityCucumberVersion = '{{cucumberV}}'
-    lombokVersion = '{{lombookV}}'
+    lombokVersion = '{{versionLoom}}'
     junit = '{{junitV}}'
     hamcrest = '{{hamcrestV}}'
 }
