--- a/src/main/resources/structure/root/build.gradle.mustache
+++ b/src/main/resources/structure/root/build.gradle.mustache
@@ -13,7 +13,7 @@ buildscript {
 }
 
 plugins {
-	id 'co.com.bancolombia.screenPlayArchitecture' version '{{screenArchitectureV}}'
+	id 'co.com.bancolombia.screenplayarchitecture' version '{{screenArchitectureV}}'
 	id 'java'
     id 'eclipse'
     id 'idea'
