NUeva tarea agrega ruta critica

--- a/src/main/resources/criticalroot/criticalRoot.json.mustache
+++ b/src/main/resources/criticalroot/criticalRoot.json.mustache
@@ -1,16 +1,11 @@
 {
     "componentes": [
         {
-            "componente": {{componentName}}",
-            "fecha_definicion": {{date}},
+            "componente": "{{componentName}}",
+            "fecha_definicion": "{{date}}",
             "activo": {{status}},
             "ruta": [
-                {
-                    "nombre_feature": "{{featureName}}",
-                    "escenarios": [
-
-                    ]
-                }
+                {{features}}
             ]
         }
     ]
