Generador de ruta critica implementado

--- a/src/main/resources/criticalroot/criticalRoot.json.mustache
+++ b/src/main/resources/criticalroot/criticalRoot.json.mustache
@@ -4,9 +4,7 @@
             "componente": "{{componentName}}",
             "fecha_definicion": "{{date}}",
             "activo": {{status}},
-            "ruta": [
-                {{features}}
-            ]
+            "ruta":{{features}}
         }
     ]
 }
