--- a/src/main/resources/features/feature/feature.feature.mustache
+++ b/src/main/resources/features/feature/feature.feature.mustache
@@ -1,7 +1,7 @@
 Feature: # Feature to evaluate
  # I as ... need ... for ...
 
- Scenario: # Scenario to evaluate
+ Scenario: # scenario to evaluate
     Given # describe the initial context of the system
     When # describe an event or action
     Then # describe result
