Ajuste runner, readme y constantes

--- a/src/main/resources/runners/Runner.java.mustache
+++ b/src/main/resources/runners/Runner.java.mustache
@@ -1,4 +1,4 @@
-package {{package}}.runners;
+package {{package}}.runners.{{folderName}};
 
 import io.cucumber.junit.CucumberOptions;
 import net.serenitybdd.cucumber.CucumberWithSerenity;
