ajuste class task

--- a/src/main/resources/tasks/ux/uxtask.java.mustache
+++ b/src/main/resources/tasks/ux/uxtask.java.mustache
@@ -13,7 +13,7 @@ public class {{taskName}} implements Task {
     @Override
     public <T extends Actor> void performAs(T actor){
         actor.attemptsTo(
-            Click.On(""),
+            Click.on(""),
             Enter.theValue("").into("")
         );
     }
